--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     },
     "devDependencies": {
         "@tailwindcss/custom-forms": "^0.2",
-        "axios": "^0.19",
+        "axios": "^0.19.2",
         "cross-env": "^7.0",
         "laravel-mix": "^5.0.1",
         "laravel-mix-tailwind": "^0.1.0",
@@ -24,7 +24,9 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^5.13.0",
         "js-cookie": "^2.2.1",
+        "vform": "^1.0.1",
         "vue-router": "^3.1.6",
         "vuex": "^3.3.0"
     }
